--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ new spine.SpinePlayer("player-container", {
 	atlasUrl: "djakarta/bonus_anim.atlas",
 	animations: ["bg_bonus_anim"], // The user can only select one of these three animations
 	// showControls: false, // Hide the player controls
-	premultipliedAlpha: false // Disable premultiplied alpha rendering
+	premultipliedAlpha: false, // Disable premultiplied alpha rendering
 	backgroundImage: { // Display a background image behind the skeleton
     url: "djakarta/bg_bonus.jpg",
     x: 0,
