--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ new spine.SpinePlayer("player-container", {
     url: "djakarta/bg_bonus.jpg",
     x: 0,
     y: 0,
-    width: 3000,
-    height: 3280
- 	}
+    width: 100%,
+    height: 100%
+ }
 });
 </script>
