--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ new spine.SpinePlayer("player-container", {
 	// showControls: false, // Hide the player controls
 	premultipliedAlpha: false, // Disable premultiplied alpha rendering
 	backgroundImage: { // Display a background image behind the skeleton
-    url: "djakarta/bg_bonus.jpg",
-    x: 0,
-    y: 0,
-    width: 100%,
-    height: 100%
- }
+		url: "djakarta/bg_bonus.jpg",
+		x: 0,
+		y: 0,
+		width: 1500,
+		height: 640
+	}
 });
 </script>
