--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ new spine.SpinePlayer("player-container", {
 	// showControls: false, // Hide the player controls
 	premultipliedAlpha: false, // Disable premultiplied alpha rendering
 	backgroundImage: { // Display a background image behind the skeleton
-		url: "djakarta/bg_bonus.jpg",
+		url: "https://lh3.googleusercontent.com/proxy/K7bxpXu18S9-ry0SCYqVhnTHoQaiierVRPxM7S8exgliIF4ZOEjy56CobTOaG3dy0666Of4jCksJUQm0xctLyF7v4nRPNnXNlAqWdnqJ_7cfy2oCAs_w5g60",
 		x: -1500,
 		y: 0,
 		width: 3000,
