--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@ new spine.SpinePlayer("player-container", {
 	animations: ["bg_bonus_anim"], // The user can only select one of these three animations
 	// showControls: false, // Hide the player controls
 	premultipliedAlpha: false, // Disable premultiplied alpha rendering
+	backgroundColor: "#ff00ffff",
 	backgroundImage: { // Display a background image behind the skeleton
-		url: "https://lh3.googleusercontent.com/proxy/K7bxpXu18S9-ry0SCYqVhnTHoQaiierVRPxM7S8exgliIF4ZOEjy56CobTOaG3dy0666Of4jCksJUQm0xctLyF7v4nRPNnXNlAqWdnqJ_7cfy2oCAs_w5g60",
+		url: "djakarta/bg_bonus.jpg",
 		x: -1500,
 		y: 0,
 		width: 3000,
