--- a/index.html
+++ b/index.html
@@ -1,22 +1,4 @@
-<script src="https://esotericsoftware.com/files/spine-player/3.8/spine-player.js"></script>
-<link rel="stylesheet" href="https://esotericsoftware.com/files/spine-player/3.8/spine-player.css">
-
-<div id="player-container" style="width: 100%; height: 100vh;"></div>
-
-<script>
-new spine.SpinePlayer("player-container", {
-	jsonUrl: "djakarta/bonus_anim.json",
-	atlasUrl: "djakarta/bonus_anim.atlas",
-	animations: ["bg_bonus_anim"], // The user can only select one of these three animations
-	// showControls: false, // Hide the player controls
-	premultipliedAlpha: false, // Disable premultiplied alpha rendering
-	backgroundColor: "#ff00ffff",
-	backgroundImage: { // Display a background image behind the skeleton
-		url: "djakarta/bg_bonus.jpg",
-		x: -1500,
-		y: 0,
-		width: 3000,
-		height: 3280
-	}
-});
-</script>
+<ol>
+	<a href="/djakarta">Djakarta</a>
+	<a href="/bali">Bali</a>
+</ol>>
