--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <ol>
-	<a href="/djakarta">Djakarta</a>
+	<a href="/djakarta/bonus_anim.html">Djakarta Bonus Anim</a> <br>
 	<a href="/bali">Bali</a>
-</ol>>
+</ol>
