--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <ol>
 	<a href="/djakarta/bonus_anim.html">Djakarta Bonus Anim</a> <br>
-	<a href="/bali">Bali</a>
+	<a href="/bali/bg_anim.html">Bali BG anim</a>
+	<a href="/bali/bonus_anim.html">Bali Bonus anim</a>
 </ol>
