--- a/djakarta/bonus_anim.html
+++ b/djakarta/bonus_anim.html
@@ -10,7 +10,7 @@ new spine.SpinePlayer("player-container", {
 	animations: ["bg_bonus_anim"], // The user can only select one of these three animations
 	// showControls: false, // Hide the player controls
 	premultipliedAlpha: false, // Disable premultiplied alpha rendering
-	backgroundColor: "#ff00ffff",
+	// backgroundColor: "#ff00ffff",
 	backgroundImage: { // Display a background image behind the skeleton
 		url: "bg_bonus.jpg",
 		x: -1500,
