--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <ol>
-	<a href="/djakarta/bonus_anim.html">Djakarta Bonus Anim</a> <br>
-	<a href="/bali/bg_anim.html">Bali BG anim</a>
-	<a href="/bali/bonus_anim.html">Bali Bonus anim</a>
+	<a href="/djakarta/bonus_anim.html">1. Djakarta Bonus Anim</a> <br>
+	<a href="/bali/bg_anim.html">2. Bali BG anim</a> <br>
+	<a href="/bali/bonus_anim.html">3. Bali Bonus anim</a> <br>
 </ol>
