--- a/bali/bg_anim.html
+++ b/bali/bg_anim.html
@@ -12,7 +12,7 @@ new spine.SpinePlayer("player-container", {
 	premultipliedAlpha: false, // Disable premultiplied alpha rendering
 	// backgroundColor: "#ff00ffff",
 	backgroundImage: { // Display a background image behind the skeleton
-		url: "bg_anim.jpg",
+		url: "bg_main.jpg",
 		x: -1500,
 		y: 0,
 		width: 3000,
