--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <ol>
-	<a href="/djakarta/bonus_anim.html">1. Djakarta Bonus Anim</a> <br>
-	<a href="/bali/bg_anim.html">2. Bali BG anim</a> <br>
-	<a href="/bali/bonus_anim.html">3. Bali Bonus anim</a> <br>
+	<li></li><a href="/djakarta/bonus_anim.html">1815 Djakarta - Bonus Anim</a></li>
+	<li></li><a href="/bali/bg_anim.html">1816 Bali - BG anim</a></li>
+	<li></li><a href="/bali/bonus_anim.html">1816 Bali - Bonus anim</a></li>
+	<li></li><a href="/forest-ranger/bg_anim.html">1819 Forest Ranger - BG anim</a></li>
+	<li></li><a href="/forest-ranger/bonus_anim.html">1819 Forest Ranger - Bonus anim</a></li>
 </ol>
