--- a/index.html
+++ b/index.html
@@ -1,7 +1,24 @@
 <ol>
-	<li></li><a href="/djakarta/bonus_anim.html">1815 Djakarta - Bonus Anim</a></li>
-	<li></li><a href="/bali/bg_anim.html">1816 Bali - BG anim</a></li>
-	<li></li><a href="/bali/bonus_anim.html">1816 Bali - Bonus anim</a></li>
-	<li></li><a href="/forest-ranger/bg_anim.html">1819 Forest Ranger - BG anim</a></li>
-	<li></li><a href="/forest-ranger/bonus_anim.html">1819 Forest Ranger - Bonus anim</a></li>
+	1815 Djakarta
+	<li><a href="/djakarta/bonus_anim.html">Bonus BG Anim</a></li>
+</ol>
+
+<ol>
+	1816 Bali
+	<li><a href="/bali/bg_anim.html">BG anim</a></li>
+	<li><a href="/bali/bonus_anim.html">Bonus BG anim</a></li>
+</ol>
+
+<ol>
+	1818 Friday Kliwon
+	<li><a href="/friday-kliwon/idol.html">Idol</a></li>
+	<li><a href="/friday-kliwon/bg_anim.html">BG anim</a></li>
+	<li><a href="/friday-kliwon/bonus_anim.html">Bonus BG anim</a></li>
+</ol>
+
+<ol>
+	1819 Forest Ranger
+	<li><a href="/forest-ranger/idol.html">Idol</a></li>
+	<li><a href="/forest-ranger/bg_anim.html">BG anim</a></li>
+	<li><a href="/forest-ranger/bonus_anim.html">Bonus BG anim</a></li>
 </ol>
