--- a/forest-ranger/bg_anim.html
+++ b/forest-ranger/bg_anim.html
@@ -9,7 +9,7 @@ new spine.SpinePlayer("player-container", {
 	atlasUrl: "bg_anim.atlas",
 	animations: ["main_anim", "free_anim"], // The user can only select one of these three animations
 	// showControls: false, // Hide the player controls
-	premultipliedAlpha: false, // Disable premultiplied alpha rendering
+	// premultipliedAlpha: false,s // Disable premultiplied alpha rendering
 	// backgroundColor: "#ff00ffff",
 	backgroundImage: { // Display a background image behind the skeleton
 		url: "bg_main.jpg",
