--- a/forest-ranger/bonus_anim.html
+++ b/forest-ranger/bonus_anim.html
@@ -9,7 +9,7 @@ new spine.SpinePlayer("player-container", {
 	atlasUrl: "bonus_anim.atlas",
 	animations: ["bg_bonus_anim"], // The user can only select one of these three animations
 	// showControls: false, // Hide the player controls
-	premultipliedAlpha: false, // Disable premultiplied alpha rendering
+	// premultipliedAlpha: false, // Disable premultiplied alpha rendering
 	// backgroundColor: "#ff00ffff",
 	backgroundImage: { // Display a background image behind the skeleton
 		url: "bg_bonus.jpg",
