--- a/friday-kliwon/idol.html
+++ b/friday-kliwon/idol.html
@@ -9,6 +9,6 @@ new spine.SpinePlayer("player-container", {
 	atlasUrl: "idol.atlas",
 	animations: ["rest", "smile", "close_eye", "throw",], // The user can only select one of these three animations
 	// showControls: false, // Hide the player controls
-	premultipliedAlpha: false, // Disable premultiplied alpha rendering
+	// premultipliedAlpha: false, // Disable premultiplied alpha rendering
 });
 </script>
