added punakawan bg anim

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </ol>
 
 <ol>
+	1817 Punakawan
+	<li><a href="/punakawan/bg_anim.html">BG anim</a></li>
+</ol>
+
+<ol>
 	1818 Friday Kliwon
 	<li><a href="/friday-kliwon/idol.html">Idol</a></li>
 	<li><a href="/friday-kliwon/bg_anim.html">BG anim</a></li>
