fixing punakawan settings

--- a/punakawan/bg_anim.html
+++ b/punakawan/bg_anim.html
@@ -12,7 +12,7 @@ new spine.SpinePlayer("player-container", {
 	premultipliedAlpha: false, // Disable premultiplied alpha rendering
 	// backgroundColor: "#ff00ffff",
 	backgroundImage: { // Display a background image behind the skeleton
-		url: "bg_free.jpg",
+		url: "bg_main.jpg",
 		x: 0,
 		y: -1280,
 		width: 3000,
