--- a/hanoman/idol.html
+++ b/hanoman/idol.html
@@ -7,8 +7,8 @@
 new spine.SpinePlayer("player-container", {
 	jsonUrl: "idol.json",
 	atlasUrl: "idol.atlas",
-	animations: ["rest", "smile", "close_eye", "throw",], // The user can only select one of these three animations
+	animations: ["rest", "smile", "close_eye", "big_price",], // The user can only select one of these three animations
 	// showControls: false, // Hide the player controls
-	// premultipliedAlpha: false, // Disable premultiplied alpha rendering
+	premultipliedAlpha: false, // Disable premultiplied alpha rendering
 });
 </script>
