--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 					<td><a href="/gatotkaca/idol.html">Link</a></td>
 					<td><a href="/gatotkaca/bg_main.html">Link</a></td>
 					<td><a href="/gatotkaca/bg_free.html">Link</a></td>
-					<td><a href="/gatotkaca/bg_bonus.html">Link</a></td>
+					<td></td>
 				</tr>
 				<tr>
 					<th scope="row">1815</th>
@@ -75,7 +75,7 @@
 				</tr>
 				<tr>
 					<th scope="row">1819</th>
-					<td>Friday Kliwon</td>
+					<td>Forest Ranger</td>
 					<td><a href="/forest-ranger/idol.html">Link</a></td>
 					<td><a href="/forest-ranger/bg_main.html">Link</a></td>
 					<td><a href="/forest-ranger/bg_free.html">Link</a></td>
@@ -94,7 +94,7 @@
 					<td>Food Court</td>
 					<td></td>
 					<td><a href="/food-court/bg_main.html">Link</a></td>
-					<td><a href="/food-court/bg_free.html">Link</a></td>
+					<td></td>
 					<td><a href="/food-court/bg_bonus.html">Link</a></td>
 				</tr>
 			</tbody>
