--- a/tropical-fruits/bg_main.html
+++ b/tropical-fruits/bg_main.html
@@ -7,7 +7,7 @@
 new spine.SpinePlayer("player-container", {
 	jsonUrl: "bg_anim.json",
 	atlasUrl: "bg_anim.atlas",
-	animations: ["main_anim"], // The user can only select one of these three animations
+	animations: ["main_anim", "menu_anim"], // The user can only select one of these three animations
 	// showControls: false, // Hide the player controls
 	premultipliedAlpha: false, // Disable premultiplied alpha rendering
 	// backgroundColor: "#ff00ffff",
