--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	</head>
 
-	<body class="container">
-		<table class="table table-striped table-dark">
+	<body class="container" style="margin-top: 10%;">
+		<table class="table table-striped">
 			<thead>
 				<tr>
 					<th scope="col">Game Code</th>
@@ -20,82 +20,82 @@
 			  	<tr>
 					<th scope="row">1811</th>
 					<td>Hanoman</td>
-					<td><a href="/hanoman/idol.html">Link</a></td>
-					<td><a href="/hanoman/bg_main.html">Link</a></td>
+					<td><a href="/hanoman/idol.html">View</a></td>
+					<td><a href="/hanoman/bg_main.html">View</a></td>
 					<td></td>
 					<td></td>
 			  	</tr>
 			  	<tr>
 					<th scope="row">1812</th>
 					<td>Tropical Fruits</td>
-					<td><a href="/tropical-fruits/idol.html">Link</a></td>
-					<td><a href="/tropical-fruits/bg_main.html">Link</a></td>
+					<td><a href="/tropical-fruits/idol.html">View</a></td>
+					<td><a href="/tropical-fruits/bg_main.html">View</a></td>
 					<td></td>
 					<td></td>
 			  	</tr>
 			  	<tr>
 					<th scope="row">1813</th>
 					<td>Gatotkaca</td>
-					<td><a href="/gatotkaca/idol.html">Link</a></td>
-					<td><a href="/gatotkaca/bg_main.html">Link</a></td>
-					<td><a href="/gatotkaca/bg_free.html">Link</a></td>
+					<td><a href="/gatotkaca/idol.html">View</a></td>
+					<td><a href="/gatotkaca/bg_main.html">View</a></td>
+					<td><a href="/gatotkaca/bg_free.html">View</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<th scope="row">1815</th>
 					<td>Djakarta</td>
-					<td><a href="/djakarta/idol.html">Link</a></td>
-					<td><a href="/djakarta/bg_main.html">Link</a></td>
-					<td><a href="/djakarta/bg_free.html">Link</a></td>
-					<td><a href="/djakarta/bg_bonus.html">Link</a></td>
+					<td><a href="/djakarta/idol.html">View</a></td>
+					<td><a href="/djakarta/bg_main.html">View</a></td>
+					<td><a href="/djakarta/bg_free.html">View</a></td>
+					<td><a href="/djakarta/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
 					<th scope="row">1816</th>
 					<td>Bali</td>
-					<td><a href="/bali/idol.html">Link</a></td>
-					<td><a href="/bali/bg_main.html">Link</a></td>
-					<td><a href="/bali/bg_free.html">Link</a></td>
-					<td><a href="/bali/bg_bonus.html">Link</a></td>
+					<td><a href="/bali/idol.html">View</a></td>
+					<td><a href="/bali/bg_main.html">View</a></td>
+					<td><a href="/bali/bg_free.html">View</a></td>
+					<td><a href="/bali/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
 					<th scope="row">1817</th>
 					<td>Punakawan</td>
 					<td></td>
-					<td><a href="/punakawan/bg_main.html">Link</a></td>
-					<td><a href="/punakawan/bg_free.html">Link</a></td>
+					<td><a href="/punakawan/bg_main.html">View</a></td>
+					<td><a href="/punakawan/bg_free.html">View</a></td>
 					<td></td>
 				</tr>
 				<tr>
 					<th scope="row">1818</th>
 					<td>Friday Kliwon</td>
-					<td><a href="/friday-kliwon/idol.html">Link</a></td>
-					<td><a href="/friday-kliwon/bg_main.html">Link</a></td>
-					<td><a href="/friday-kliwon/bg_free.html">Link</a></td>
-					<td><a href="/friday-kliwon/bg_bonus.html">Link</a></td>
+					<td><a href="/friday-kliwon/idol.html">View</a></td>
+					<td><a href="/friday-kliwon/bg_main.html">View</a></td>
+					<td><a href="/friday-kliwon/bg_free.html">View</a></td>
+					<td><a href="/friday-kliwon/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
 					<th scope="row">1819</th>
 					<td>Forest Ranger</td>
-					<td><a href="/forest-ranger/idol.html">Link</a></td>
-					<td><a href="/forest-ranger/bg_main.html">Link</a></td>
-					<td><a href="/forest-ranger/bg_free.html">Link</a></td>
-					<td><a href="/forest-ranger/bg_bonus.html">Link</a></td>
+					<td><a href="/forest-ranger/idol.html">View</a></td>
+					<td><a href="/forest-ranger/bg_main.html">View</a></td>
+					<td><a href="/forest-ranger/bg_free.html">View</a></td>
+					<td><a href="/forest-ranger/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
 					<th scope="row">1820</th>
 					<td>South Sea Treasure</td>
-					<td><a href="/south-sea-treasure/idol.html">Link</a></td>
-					<td><a href="/south-sea-treasure/bg_main.html">Link</a></td>
+					<td><a href="/south-sea-treasure/idol.html">View</a></td>
+					<td><a href="/south-sea-treasure/bg_main.html">View</a></td>
 					<td></td>
-					<td><a href="/south-sea-treasure/bg_bonus.html">Link</a></td>
+					<td><a href="/south-sea-treasure/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
 					<th scope="row">1821</th>
 					<td>Food Court</td>
 					<td></td>
-					<td><a href="/food-court/bg_main.html">Link</a></td>
+					<td><a href="/food-court/bg_main.html">View</a></td>
 					<td></td>
-					<td><a href="/food-court/bg_bonus.html">Link</a></td>
+					<td><a href="/food-court/bg_bonus.html">View</a></td>
 				</tr>
 			</tbody>
 		</table>
