--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	</head>
 
 	<body class="container" style="margin-top: 10%;">
-		<table class="table table-striped">
-			<thead>
+		<table class="table table-striped table-bordered table-responsive-md">
+			<thead class="table-primary">
 				<tr>
 					<th scope="col">Game Code</th>
 					<th scope="col">Game Name</th>
