--- a/food-court/bg_free.html
+++ b/food-court/bg_free.html
@@ -7,9 +7,9 @@
 new spine.SpinePlayer("player-container", {
 	jsonUrl: "bg_anim.json",
 	atlasUrl: "bg_anim.atlas",
-	animations: ["main_anim"], // The user can only select one of these three animations
+	animations: ["free_anim"], // The user can only select one of these three animations
 	// showControls: false, // Hide the player controls
-	// premultipliedAlpha: false, // Disable premultiplied alpha rendering
+	premultipliedAlpha: false, // Disable premultiplied alpha rendering
 	// backgroundColor: "#ff00ffff",
 	backgroundImage: { // Display a background image behind the skeleton
 		url: "bg_main.jpg",
