--- a/index.html
+++ b/index.html
@@ -10,94 +10,94 @@
 		<table class="table table-striped table-bordered table-responsive-md">
 			<thead class="table-primary">
 				<tr>
-					<th scope="col">Game Code</th>
+					<th scope="col" class="text-center">Game Code</th>
 					<th scope="col">Game Name</th>
-					<th scope="col">Idol</th>
-					<th scope="col">BG Main</th>
-					<th scope="col">BG Free</th>
-					<th scope="col">BG Bonus</th>
+					<th scope="col" class="text-center">Idol</th>
+					<th scope="col" class="text-center">BG Main</th>
+					<th scope="col" class="text-center">BG Free</th>
+					<th scope="col" class="text-center">BG Bonus</th>
 			  	</tr>
 			</thead>
 			<tbody>
 			  	<tr>
-					<th scope="row">1811</th>
+					<th scope="row" class="text-center">1811</th>
 					<td>Hanoman</td>
-					<td><a href="/hanoman/idol.html">View</a></td>
-					<td><a href="/hanoman/bg_main.html">View</a></td>
-					<td></td>
-					<td></td>
+					<td class="text-center"><a href="/hanoman/idol.html">View</a></td>
+					<td class="text-center"><a href="/hanoman/bg_main.html">View</a></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
 			  	</tr>
 			  	<tr>
-					<th scope="row">1812</th>
+					<th scope="row" class="text-center">1812</th>
 					<td>Tropical Fruits</td>
-					<td><a href="/tropical-fruits/idol.html">View</a></td>
-					<td><a href="/tropical-fruits/bg_main.html">View</a></td>
-					<td></td>
-					<td></td>
+					<td class="text-center"><a href="/tropical-fruits/idol.html">View</a></td>
+					<td class="text-center"><a href="/tropical-fruits/bg_main.html">View</a></td>
+					<td class="text-center"></td>
+					<td class="text-center"></td>
 			  	</tr>
 			  	<tr>
-					<th scope="row">1813</th>
+					<th scope="row" class="text-center">1813</th>
 					<td>Gatotkaca</td>
-					<td><a href="/gatotkaca/idol.html">View</a></td>
-					<td><a href="/gatotkaca/bg_main.html">View</a></td>
-					<td><a href="/gatotkaca/bg_free.html">View</a></td>
-					<td></td>
+					<td class="text-center"><a href="/gatotkaca/idol.html">View</a></td>
+					<td class="text-center"><a href="/gatotkaca/bg_main.html">View</a></td>
+					<td class="text-center"><a href="/gatotkaca/bg_free.html">View</a></td>
+					<td class="text-center"></td>
 				</tr>
 				<tr>
-					<th scope="row">1815</th>
+					<th scope="row" class="text-center">1815</th>
 					<td>Djakarta</td>
-					<td><a href="/djakarta/idol.html">View</a></td>
-					<td><a href="/djakarta/bg_main.html">View</a></td>
-					<td><a href="/djakarta/bg_free.html">View</a></td>
-					<td><a href="/djakarta/bg_bonus.html">View</a></td>
+					<td class="text-center"><a href="/djakarta/idol.html">View</a></td>
+					<td class="text-center"><a href="/djakarta/bg_main.html">View</a></td>
+					<td class="text-center"><a href="/djakarta/bg_free.html">View</a></td>
+					<td class="text-center"><a href="/djakarta/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
-					<th scope="row">1816</th>
+					<th scope="row" class="text-center">1816</th>
 					<td>Bali</td>
-					<td><a href="/bali/idol.html">View</a></td>
-					<td><a href="/bali/bg_main.html">View</a></td>
-					<td><a href="/bali/bg_free.html">View</a></td>
-					<td><a href="/bali/bg_bonus.html">View</a></td>
+					<td class="text-center"><a href="/bali/idol.html">View</a></td>
+					<td class="text-center"><a href="/bali/bg_main.html">View</a></td>
+					<td class="text-center"><a href="/bali/bg_free.html">View</a></td>
+					<td class="text-center"><a href="/bali/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
-					<th scope="row">1817</th>
+					<th scope="row" class="text-center">1817</th>
 					<td>Punakawan</td>
-					<td></td>
-					<td><a href="/punakawan/bg_main.html">View</a></td>
-					<td><a href="/punakawan/bg_free.html">View</a></td>
-					<td></td>
+					<td class="text-center"></td>
+					<td class="text-center"><a href="/punakawan/bg_main.html">View</a></td>
+					<td class="text-center"><a href="/punakawan/bg_free.html">View</a></td>
+					<td class="text-center"></td>
 				</tr>
 				<tr>
-					<th scope="row">1818</th>
+					<th scope="row" class="text-center">1818</th>
 					<td>Friday Kliwon</td>
-					<td><a href="/friday-kliwon/idol.html">View</a></td>
-					<td><a href="/friday-kliwon/bg_main.html">View</a></td>
-					<td><a href="/friday-kliwon/bg_free.html">View</a></td>
-					<td><a href="/friday-kliwon/bg_bonus.html">View</a></td>
+					<td class="text-center"><a href="/friday-kliwon/idol.html">View</a></td>
+					<td class="text-center"><a href="/friday-kliwon/bg_main.html">View</a></td>
+					<td class="text-center"><a href="/friday-kliwon/bg_free.html">View</a></td>
+					<td class="text-center"><a href="/friday-kliwon/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
-					<th scope="row">1819</th>
+					<th scope="row" class="text-center">1819</th>
 					<td>Forest Ranger</td>
-					<td><a href="/forest-ranger/idol.html">View</a></td>
-					<td><a href="/forest-ranger/bg_main.html">View</a></td>
-					<td><a href="/forest-ranger/bg_free.html">View</a></td>
-					<td><a href="/forest-ranger/bg_bonus.html">View</a></td>
+					<td class="text-center"><a href="/forest-ranger/idol.html">View</a></td>
+					<td class="text-center"><a href="/forest-ranger/bg_main.html">View</a></td>
+					<td class="text-center"><a href="/forest-ranger/bg_free.html">View</a></td>
+					<td class="text-center"><a href="/forest-ranger/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
-					<th scope="row">1820</th>
+					<th scope="row" class="text-center">1820</th>
 					<td>South Sea Treasure</td>
-					<td><a href="/south-sea-treasure/idol.html">View</a></td>
-					<td><a href="/south-sea-treasure/bg_main.html">View</a></td>
-					<td></td>
-					<td><a href="/south-sea-treasure/bg_bonus.html">View</a></td>
+					<td class="text-center"><a href="/south-sea-treasure/idol.html">View</a></td>
+					<td class="text-center"><a href="/south-sea-treasure/bg_main.html">View</a></td>
+					<td class="text-center"></td>
+					<td class="text-center"><a href="/south-sea-treasure/bg_bonus.html">View</a></td>
 				</tr>
 				<tr>
-					<th scope="row">1821</th>
+					<th scope="row" class="text-center">1821</th>
 					<td>Food Court</td>
-					<td></td>
-					<td><a href="/food-court/bg_main.html">View</a></td>
-					<td></td>
-					<td><a href="/food-court/bg_bonus.html">View</a></td>
+					<td class="text-center"></td>
+					<td class="text-center"><a href="/food-court/bg_main.html">View</a></td>
+					<td class="text-center"></td>
+					<td class="text-center"><a href="/food-court/bg_bonus.html">View</a></td>
 				</tr>
 			</tbody>
 		</table>
