--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 					<td class="text-center"><a href="/south-sea-treasure/idol.html">View</a></td>
 					<td class="text-center"><a href="/south-sea-treasure/bg_main.html">View</a></td>
 					<td class="text-center"></td>
-					<td class="text-center"><a href="/south-sea-treasure/bg_bonus.html">View</a></td>
+					<td class="text-center"></td>
 				</tr>
 				<tr>
 					<th scope="row" class="text-center">1821</th>
@@ -97,7 +97,7 @@
 					<td class="text-center"></td>
 					<td class="text-center"><a href="/food-court/bg_main.html">View</a></td>
 					<td class="text-center"></td>
-					<td class="text-center"><a href="/food-court/bg_bonus.html">View</a></td>
+					<td class="text-center"></td>
 				</tr>
 			</tbody>
 		</table>
