adding new game assets

--- a/index.html
+++ b/index.html
@@ -99,6 +99,14 @@
 					<td class="text-center"></td>
 					<td class="text-center"></td>
 				</tr>
+				<tr>
+					<th scope="row" class="text-center"></th>
+					<td>Axe Warrior</td>
+					<td class="text-center"><a href="/axe-warrior/idol.html">View</a></td>
+					<td class="text-center"><a href="/axe-warrior/bg_main.html">View</a></td>
+					<td class="text-center"><a href="/axe-warrior/bg_free.html">View</a></td>
+					<td class="text-center"><a href="/axe-warrior/bg_bonus.html">View</a></td>
+				</tr>
 			</tbody>
 		</table>
 
