adding new assets

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 					<th scope="col" class="text-center">Game Code</th>
 					<th scope="col">Game Name</th>
 					<th scope="col" class="text-center">Idol</th>
+					<th scope="col" class="text-center">BG Menu</th>
 					<th scope="col" class="text-center">BG Main</th>
 					<th scope="col" class="text-center">BG Free</th>
 					<th scope="col" class="text-center">BG Bonus</th>
@@ -23,6 +24,7 @@
 					<th scope="row" class="text-center">1811</th>
 					<td>Hanoman</td>
 					<td class="text-center"><a href="/hanoman/idol.html">View</a></td>
+					<td class="text-center"></td>
 					<td class="text-center"><a href="/hanoman/bg_main.html">View</a></td>
 					<td class="text-center"></td>
 					<td class="text-center"></td>
@@ -31,6 +33,7 @@
 					<th scope="row" class="text-center">1812</th>
 					<td>Tropical Fruits</td>
 					<td class="text-center"><a href="/tropical-fruits/idol.html">View</a></td>
+					<td class="text-center"></td>
 					<td class="text-center"><a href="/tropical-fruits/bg_main.html">View</a></td>
 					<td class="text-center"></td>
 					<td class="text-center"></td>
@@ -47,6 +50,7 @@
 					<th scope="row" class="text-center">1815</th>
 					<td>Djakarta</td>
 					<td class="text-center"><a href="/djakarta/idol.html">View</a></td>
+					<td class="text-center"></td>
 					<td class="text-center"><a href="/djakarta/bg_main.html">View</a></td>
 					<td class="text-center"><a href="/djakarta/bg_free.html">View</a></td>
 					<td class="text-center"><a href="/djakarta/bg_bonus.html">View</a></td>
@@ -55,6 +59,7 @@
 					<th scope="row" class="text-center">1816</th>
 					<td>Bali</td>
 					<td class="text-center"><a href="/bali/idol.html">View</a></td>
+					<td class="text-center"></td>
 					<td class="text-center"><a href="/bali/bg_main.html">View</a></td>
 					<td class="text-center"><a href="/bali/bg_free.html">View</a></td>
 					<td class="text-center"><a href="/bali/bg_bonus.html">View</a></td>
@@ -62,6 +67,7 @@
 				<tr>
 					<th scope="row" class="text-center">1817</th>
 					<td>Punakawan</td>
+					<td class="text-center"></td>
 					<td class="text-center"></td>
 					<td class="text-center"><a href="/punakawan/bg_main.html">View</a></td>
 					<td class="text-center"><a href="/punakawan/bg_free.html">View</a></td>
@@ -71,6 +77,7 @@
 					<th scope="row" class="text-center">1818</th>
 					<td>Friday Kliwon</td>
 					<td class="text-center"><a href="/friday-kliwon/idol.html">View</a></td>
+					<td class="text-center"></td>
 					<td class="text-center"><a href="/friday-kliwon/bg_main.html">View</a></td>
 					<td class="text-center"><a href="/friday-kliwon/bg_free.html">View</a></td>
 					<td class="text-center"><a href="/friday-kliwon/bg_bonus.html">View</a></td>
@@ -79,6 +86,7 @@
 					<th scope="row" class="text-center">1819</th>
 					<td>Forest Ranger</td>
 					<td class="text-center"><a href="/forest-ranger/idol.html">View</a></td>
+					<td class="text-center"><a href="/forest-ranger/bg_menu.html">View</a></td>
 					<td class="text-center"><a href="/forest-ranger/bg_main.html">View</a></td>
 					<td class="text-center"><a href="/forest-ranger/bg_free.html">View</a></td>
 					<td class="text-center"><a href="/forest-ranger/bg_bonus.html">View</a></td>
@@ -87,6 +95,7 @@
 					<th scope="row" class="text-center">1820</th>
 					<td>South Sea Treasure</td>
 					<td class="text-center"><a href="/south-sea-treasure/idol.html">View</a></td>
+					<td class="text-center"></td>
 					<td class="text-center"><a href="/south-sea-treasure/bg_main.html">View</a></td>
 					<td class="text-center"></td>
 					<td class="text-center"></td>
@@ -94,6 +103,7 @@
 				<tr>
 					<th scope="row" class="text-center">1821</th>
 					<td>Food Court</td>
+					<td class="text-center"></td>
 					<td class="text-center"></td>
 					<td class="text-center"><a href="/food-court/bg_main.html">View</a></td>
 					<td class="text-center"></td>
@@ -103,6 +113,7 @@
 					<th scope="row" class="text-center"></th>
 					<td>Axe Warrior</td>
 					<td class="text-center"><a href="/axe-warrior/idol.html">View</a></td>
+					<td class="text-center"><a href="/axe-warrior/bg_menu.html">View</a></td>
 					<td class="text-center"><a href="/axe-warrior/bg_main.html">View</a></td>
 					<td class="text-center"><a href="/axe-warrior/bg_free.html">View</a></td>
 					<td class="text-center"><a href="/axe-warrior/bg_bonus.html">View</a></td>
