--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 					<th scope="row" class="text-center">1813</th>
 					<td>Gatotkaca</td>
 					<td class="text-center"><a href="/gatotkaca/idol.html">View</a></td>
+					<td class="text-center"></td>
 					<td class="text-center"><a href="/gatotkaca/bg_main.html">View</a></td>
 					<td class="text-center"><a href="/gatotkaca/bg_free.html">View</a></td>
 					<td class="text-center"></td>
