adding garudaman assets

--- a/index.html
+++ b/index.html
@@ -111,13 +111,22 @@
 					<td class="text-center"></td>
 				</tr>
 				<tr>
-					<th scope="row" class="text-center"></th>
+					<th scope="row" class="text-center">18XX</th>
 					<td>Axe Warrior</td>
 					<td class="text-center"><a href="/axe-warrior/idol.html">View</a></td>
 					<td class="text-center"><a href="/axe-warrior/bg_menu.html">View</a></td>
 					<td class="text-center"><a href="/axe-warrior/bg_main.html">View</a></td>
 					<td class="text-center"><a href="/axe-warrior/bg_free.html">View</a></td>
 					<td class="text-center"><a href="/axe-warrior/bg_bonus.html">View</a></td>
+				</tr>
+				<tr>
+					<th scope="row" class="text-center">18XX</th>
+					<td>Garudaman</td>
+					<td class="text-center"><a href="/garudaman/idol.html">View</a></td>
+					<td class="text-center"></td>
+					<td class="text-center"><a href="/garudaman/bg_main.html">View</a></td>
+					<td class="text-center"><a href="/garudaman/bg_free.html">View</a></td>
+					<td class="text-center"><a href="/garudaman/bg_bonus.html">View</a></td>
 				</tr>
 			</tbody>
 		</table>
